--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
-EMAIL_USERNAME="jprashik42@gmail.com"
-EMAIL_PASSWORD="yjhk kmeq rupt cebu"
+EMAIL_USERNAME="Email_address"
+EMAIL_PASSWORD="email_app_passsword"
